@@ -11,6 +11,15 @@ project's main git repository: [[https://github.com/captainflasmr/ollama-buddy
 
 * Versions
 
+** <2025-02-19>
+
+Improved prompt handling in chat buffer - using C-c C-c to send
+
+- Chat buffer now more prompt based rather than ad-hoc
+- Refactored =ollama-buddy--send= to handle content more flexibly
+- Simplified chat separators for better readability  
+- Updated intro message with ascii logo
+
 ** <2025-02-13>
 
 Models can be assigned to individual commands
